# Basic-api-with-rocket

./: Cargo.toml  README.md  Rocket.toml  db.sqlite  db.sqlite-shm  db.sqlite-wal
migrations/2024-04-03-080638_create_rustaceans/: up.sql
src/: auth.rs  main.rs  models.rs  repositories.rs
