[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.114",  features = ["derive"] }
base64 = "0.22.0"
serde_json = "1.0.114"
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
diesel = { version = "2.1.0", features = ["sqlite","r2d2"] }
diesel_migrations = "1.4"


[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool"]

